# AI_TS_Platform_v2

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  _test_eval_agent.py  _test_plan_agent.py  _test_work_agent.py  eval_agent.py  plan_agent.py  summary_agent.py  test_summary_agent.py  work_agent.py
backend/: __init__.py  app.py  task_manager.py  test_api.py
backend/RAG/: rag_struct.py
backend/model_src/: result.txt  run_longExp.py
backend/model_src/Formers/FEDformer/: run.py
backend/model_src/Formers/FEDformer/data_provider/: data_factory.py  data_loader.py
backend/model_src/Formers/FEDformer/exp/: exp_main.py
backend/model_src/Formers/FEDformer/layers/: Autoformer_EncDec.py  MultiWaveletCorrelation.py  SelfAttention_Family.py
backend/model_src/Formers/Pyraformer/: data_loader.py  long_range_main.py  single_step_main.py
backend/model_src/data_provider/: data_factory.py  data_loader.py
backend/model_src/exp/: exp_main.py
backend/model_src/layers/: PatchTST_backbone.py  SelfAttention_Family.py
backend/model_src/models/: Autoformer.py  Informer.py  PatchTST.py  Transformer.py
backend/routers/: __init__.py  predict.py  train.py
conf/: __init__.py  llm.py
scripts/: _test_util.py  test_integration_inference.py  test_integration_iterate.py  test_integration_train.py
skills/: __init__.py  api_skill.py  checkpoint_skill.py  log_parser_skill.py  metric_skill.py  param_validate_skill.py  rag_skill.py  test_param_validate.py  test_vector_rag.py  vector_db_skill.py  visualization_skill.py
(+5 files in other folders)
