[project]
name = "ai-ts-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymilvus>=3.0.0",
    "transformers>=5.8.1",
]
