[project]
name = "ai-ts-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "huggingface-hub>=1.14.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymilvus[milvus-lite]>=3.0.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.11.0",
    "transformers>=5.8.1",
]
